* ucollect-fake: Don't intercept connections from LAN
* atsha204: use atsha204 to improve entropy
* suricata: new package - IDS
* kernel: add SUSE btrfs patches and CPUFreq patches
* cznic-cacert-bundle: Drop old ucollect certificate (server already switched)
* kernel: updated to the last available version
* lighttpd: updated and cleaned up, disabled mod_mysql_vhost
* foris-openvpn-plugin: new plugin which helps to perform a simple openvpn server setting on your router
* nuci: ca-gen plugin added - it is used to generate CA, dhparams and certificates (could be used by e.g. openvpn server/client)
* nuci: openvpn-client plugin added - it should be able to generate client config based on server configuration from uci
===================== 3.5 =======================
* knot-resolver: support forwarding to multiple servers
* Foris: add retry mechanism when NETCONF server dies, reintroduce sending stats to About page on Turris
* fstrim: include binary
* gettext: provide binary to be used in scripts
* openssh: update to version 7.4p1
* hostapd: enable FST
* nuci: fix backup restore script
* kernel: not removing info from proc
* lighttpd: do not block on getting entropy during boot
* squid: updtae to version 3.5.23
* curl: update to version 7.52.1
* ebtables: fixed segfaulting
* knot: update to version 2.3.3
* kmod-uvc: Make it compile on Omnia
* kmod-sched-cake: Update from LEDE
* wifi: Update mac80211, ath10k-ct and hostapd from LEDE
* ath10k: use ath10k again as default instead of ath10k-ct
* mac80211: Backport a few more patches from LEDE
* diagnostics: turris_webs module added - checks whether the turris webs (api.turris.cz, www.turris.cz)
* nuci: Fix of dir_content function
* python-bottle: Update to 0.12.11 (fixes CVE-2016-9964; Foris was not affected)
===================== 3.4 =======================
* printing: Proof of concept of CUPS integration
* python-turris-gpio: Add support for Turris Omnia board.