@@ -14,7 +14,7 @@ CONFIG_BUSYBOX_CONFIG_CROND=n
 CONFIG_BUSYBOX_CONFIG_CRONTAB=n
 CONFIG_BUSYBOX_CONFIG_SYSLOGD=n
 CONFIG_BUSYBOX_CONFIG_STTY=y
-CONFIG_VERSION_REPO="https://api.turris.cz/openwrt-repo/@BOARD@@BRANCH@/packages/"
+CONFIG_VERSION_REPO="https://repo.turris.cz/@BOARD@@BRANCH@/packages/"
 CONFIG_VERSION_NICK="@BOARD@"
 CONFIG_DEFAULT_updater=n
 # CONFIG_PACKAGE_updater is not set
