@@ -329,7 +329,7 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="OpenWrt"
 CONFIG_VERSION_NICK="omnia"
 CONFIG_VERSION_NUMBER=""
-CONFIG_VERSION_REPO="https://api.turris.cz/openwrt-repo/omnia/packages"
+CONFIG_VERSION_REPO="https://repo.turris.cz/omnia/packages"
 CONFIG_VERSION_MANUFACTURER=""
 CONFIG_VERSION_PRODUCT=""
 CONFIG_VERSION_HWREV=""
