@@ -1,3 +1,4 @@
+* opkg: Use repo.turris.cz because of certificates
 * ucollect-fake: Don't intercept connections from LAN
 * atsha204: use atsha204 to improve entropy
 * suricata: new package - IDS
